# python-project-52

./: Makefile  README.md  pyproject.toml  setup.cfg
task_manager/: mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_tasks_description.py  0003_alter_tasks_labels.py  0004_alter_tasks_labels.py  0005_alter_tasks_labels.py  0006_alter_tasks_labels.py  0007_alter_tasks_executor_alter_tasks_labels.py
task_manager/templates/: base.html  delete.html  form.html  index.html
task_manager/templates/labels/: create.html  labels_list.html
task_manager/templates/statuses/: create.html  statuses_list.html
task_manager/templates/tasks/: create.html  tasks_list.html
task_manager/templates/users/: detail.html  login.html  signup.html  users_list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_remove_customuser_second_name_and_more.py
