[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["fixer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
